--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -18,6 +18,6 @@ pipeline:
       pull_image: true
       platforms:
         - linux/amd64
-        - linux/arm64
+#        - linux/arm64
     when:
       event: push
