add uc2 products

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "orchestrate"]
 	path = orchestrate
 	url = https://github.com/dotwebstack/orchestrate.git
+[submodule "WaU-UC2"]
+	path = WaU-UC2
+	url = git@github.com:Geonovum/WaU-UC2.git
