--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -31,3 +31,17 @@ pipeline:
       platforms:
         - linux/amd64
 
+  ld:
+    image: docker.ci.interactive-instruments.de/cicd/drone-docker-buildx
+    privileged: true
+    settings:
+      registry: docker.ci.interactive-instruments.de
+      repo: docker.ci.interactive-instruments.de/wau/ld
+      dockerfile: WaU-UC2/products/gebouw-ld/Dockerfile
+      context: WaU-UC2/products/gebouw-ld
+      tags: latest
+      force_tag: true
+      pull_image: true
+      platforms:
+        - linux/amd64
+
