--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -8,6 +8,8 @@ pipeline:
   orchestrate:
     image: docker.ci.interactive-instruments.de/cicd/drone-docker-buildx
     privileged: true
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     settings:
       registry: docker.ci.interactive-instruments.de
       repo: docker.ci.interactive-instruments.de/wau/orchestrate
@@ -20,6 +22,8 @@ pipeline:
   rest-api:
     image: docker.ci.interactive-instruments.de/cicd/drone-docker-buildx
     privileged: true
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     settings:
       registry: docker.ci.interactive-instruments.de
       repo: docker.ci.interactive-instruments.de/wau/rest-api
@@ -34,6 +38,8 @@ pipeline:
   ld:
     image: docker.ci.interactive-instruments.de/cicd/drone-docker-buildx
     privileged: true
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     settings:
       registry: docker.ci.interactive-instruments.de
       repo: docker.ci.interactive-instruments.de/wau/ld
